<resources>
    <string name="app_name">Best Buy</string>
    <string name="price">Price</string>
    <string name="volume">Volume</string>
    <string name="number">Number</string>
    <string name="unitPrice">Unit Price</string>
    <string name="clear">Clear</string>
    <string name="invalidTextMessage">The value cannot be converted to number</string>
    <string name="menuItemCount">Number of items</string>
    <string name="menuItemCount2">2 items</string>
    <string name="menuItemCount3">3 items</string>
    <string name="menuItemCount4">4 items</string>
    <string name="menuItemCount5">5 items</string>
    <string name="menuItemDecimalPlaces">Number of decimal places</string>
    <string name="menuItemDecimalPlaces0">0</string>
    <string name="menuItemDecimalPlaces1">1</string>
    <string name="menuItemDecimalPlaces2">2</string>
    <string name="menuItemDecimalPlaces3">3</string>
    <string name="best">BEST!!</string>
</resources>