<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menuItemCount">
        <menu>
            <group
                android:id="@+id/selectCompareItemNum"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menuItemCount2"
                    android:title="@string/menuItemCount2" />
                <item
                    android:id="@+id/menuItemCount3"
                    android:title="@string/menuItemCount3" />
                <item
                    android:id="@+id/menuItemCount4"
                    android:title="@string/menuItemCount4" />
                <item
                    android:id="@+id/menuItemCount5"
                    android:title="@string/menuItemCount5" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menuItemDecimalPlaces" >
        <menu >
            <group android:id="@+id/selectDecimalPlaces">
                <item
                    android:id="@+id/menuItemDecPlaces0"
                    android:title="@string/menuItemDecimalPlaces0" />
                <item
                    android:id="@+id/menuItemDecPlaces1"
                    android:title="@string/menuItemDecimalPlaces1" />
                <item
                    android:id="@+id/menuItemDecPlaces2"
                    android:title="@string/menuItemDecimalPlaces2" />
                <item
                    android:id="@+id/menuItemDecPlaces3"
                    android:title="@string/menuItemDecimalPlaces3" />
            </group>
        </menu>
    </item>
</menu>